--- a/glossary.tex
+++ b/glossary.tex
@@ -74,7 +74,7 @@
 \newacronym{RRT}{RRT}{Rapidly-exploring Random Tree}
 \newacronym{BFBEL}{BFBEL}{Bidirectional Fuzzy Brain Emotional Learning}
 \newacronym{BBEL}{BBEL}{Bidirectional Brain Emotional Learning}
-\newacronym{H-inf}{$\mathscr{H}_\infty$}{H-Infinity}
+\newacronym{H-inf}{$\mathcal{H}_\infty$}{H-Infinity}
 \newacronym{RISE}{RISE}{Robust Integral of the Sign of the Error}
 \newacronym{SMC}{SMC}{Sliding Mode Control}
 \newacronym{RCAC}{RCAC}{Retrospective Cost Adaptive Control}
